gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue22820.d
version https://git-lfs.github.com/spec/v1
oid sha256:4577acbc76f510b2d3494ed6e9cf31649e5116d69f8fe4c330c0d9a3c1dd374f
size 1785
